Updated documentation for location of IDL_Cubit.dsw

--- a/trunk/TAO/TAO-INSTALL.html
+++ b/trunk/TAO/TAO-INSTALL.html
@@ -148,14 +148,14 @@ files in the correct place.</P>
   
   <LI>Make sure <CODE>ACE_wrappers\ace</CODE> is listed in the Executable 
       Directories in Tools|Options.  This is needed if using the TAO_IDL
-	  compiler under MSVC.<P>
+      compiler under MSVC.<P>
 
   <LI>Load the workspace <CODE>tao\TAO.dsw</CODE> and build the TAO 
       library. <P>
 
   <LI>To build the Cubit test, load the workspace 
-      <CODE>tests\Cubit\TAO\test.dsw</CODE> and build both client 
-      and server. <P>
+      <CODE>tests\Cubit\TAO\IDL_Cubit\IDL_Cubit.dsw</CODE> and build both 
+      client and server. <P>
 </OL>
 
 <H4><A NAME="taoace">TAOACE.dsw</A></H4>
