*** empty log message ***

--- a/trunk/ACE-INSTALL.html
+++ b/trunk/ACE-INSTALL.html
@@ -977,8 +977,8 @@ A few additional Windows Notes, from Paul von Behren:<p>
   <LI>Cygnus has created a Win32 API which is compatible with a
       ``generic'' Unix environment.  Using this library, they have ported a
       large collection of GNU tools to WinNT/95 - including a port of
-      gcc/g++.  See <A href="http://www.cygnus.com/miscgni-win32/">
-      http://www.cygnus.com/miscgni-win32/</A>
+      gcc/g++.  See <A href="http://www.cygnus.com/misc/gnu-win32/">
+      http://www.cygnus.com/misc/gnu-win32/</A>
       WindRiver provides a subset of these tools - including make
       and gcc cross-compilers.<p>
   <LI>To set up the command-prompt build environemnt, run
