*** empty log message ***

--- a/trunk/TAO/TAO-INSTALL.html
+++ b/trunk/TAO/TAO-INSTALL.html
@@ -221,8 +221,7 @@ adding an IDL file named foobar.idl into a VC project.
       non-IDL generated files into both client and server projects.</LI>
 
   <LI>Added foobarC.h, foobarC.i, foobarC.cpp, foobarS.h, foobarS.i, and 
-      foobarS.cpp into the server project and foobarC.h, foobarC.i, and 
-	  foobarC.cpp into the client project.</LI>
+      foobarS.cpp into both server and client projects.</LI>
 
   <LI>Now open the project setting window (Project -&gt; Setting... or just 
       press Alt-F7.) Select the IDL files in both client and server projects. 
