*** empty log message ***

--- a/trunk/etc/DOC-way.html
+++ b/trunk/etc/DOC-way.html
@@ -44,6 +44,7 @@ research group:
 <LI> Create at least one bug every day (and then fix it ;-))
 <LI> Fix your own bugs
 <LI> Swear at other people's bugs.... but also fix them
+<LI> Resist the temptation to express "code rage"
 <LI> Move one step closer to world domination every day
 </UL>
 
