Change the path to bin instead of ace

--- a/trunk/ACE-INSTALL.html
+++ b/trunk/ACE-INSTALL.html
@@ -695,7 +695,7 @@ the STL fixes.
       are a mixture of Debug/Release, Unicode/non-Unicode, and
       Static/Dynamic library versions for both i386 and Alpha machines.
       <STRONG>Note:</STRONG> If you
-      use the dynamic libraries, make sure you include ACE_ROOT\ace
+      use the dynamic libraries, make sure you include ACE_ROOT\bin
       in your PATH whenever you run programs that use ACE.<BR><BR>
   <LI> If you are building for Windows NT then you can start building
       now.  If you are building on Windows 95, then you should add
