--- a/trunk/etc/DOC-way.html
+++ b/trunk/etc/DOC-way.html
@@ -45,6 +45,7 @@ research group:
 <LI> Fix your own bugs
 <LI> Swear at other people's bugs.... but also fix them
 <LI> Resist the temptation to express "code rage"
+<LI> Resist the temptation to become <A HREF="http://www.cs.wustl.edu/~schmidt/demotivation.html">demotivated</A>
 <LI> Move one step closer to world domination every day
 </UL>
 
