--- a/trunk/ACE-INSTALL.html
+++ b/trunk/ACE-INSTALL.html
@@ -273,8 +273,8 @@ try to help you fix the problems.
       although they warn about template usage.  Most tests run, some dump
       core.<P>
 
-      CXX 6.0 and 6.1 are _much_ improved in this regard:  they build all of
-      ACE cleanly.  Please note that
+      CXX 6.0 and 6.1 are _much_ improved in this regard:  V6.0-020
+      and V6.1-025 and later build all of ACE cleanly.  Please note that
       <code>include/makeinclude/platform_osf1_4.0.GNU</code> has a
       <strong><code>WARNING_FLAGS</code></strong> macro that is disabled by
       default, to support users who don't have 6.0 yet.  If you do, enable
@@ -282,6 +282,10 @@ try to help you fix the problems.
       invocation, or editing your include/makeinclude/platform_macros.GNU
       file.  All of the tests in ACE_wrappers/tests run successfully with
       CXX 6.0 and CXX 6.1.<P>
+
+      Please note that problems have been reported with some
+      versions of CXX 6.1, notably versions -021 and earlier.
+      It's best to use the V6.1-022 or later.<p>
 
       GNU gcc 2.7.2.1 compiles without problems. All tests run (besides
       minor problems).  Thanks to Thilo Kielmann &lt<A
