removed extra "the"

--- a/trunk/ACE-INSTALL.html
+++ b/trunk/ACE-INSTALL.html
@@ -285,7 +285,7 @@ try to help you fix the problems.
 
       Please note that problems have been reported with some
       versions of CXX 6.1, notably versions -021 and earlier.
-      It's best to use the V6.1-022 or later.<p>
+      It's best to use V6.1-022 or later.<p>
 
       GNU gcc 2.7.2.1 compiles without problems. All tests run (besides
       minor problems).  Thanks to Thilo Kielmann &lt<A
