--- a/trunk/etc/DOC-way.html
+++ b/trunk/etc/DOC-way.html
@@ -46,7 +46,7 @@ research group:
 <LI> Swear at other people's bugs.... but also fix them
 <LI> Resist the temptation to express "code rage"
 <LI> Resist the temptation to become <A HREF="http://www.cs.wustl.edu/~schmidt/demotivation.html">demotivated</A>
-<LI> Move one step closer to world domination every day
+<LI> Move one step closer to <A HREF="http://www.cs.wustl.edu/~schmidt/gifs/microsoft.gif">world domination</A> every day
 </UL>
 
 </BODY>
