--- a/trunk/ACE-INSTALL.html
+++ b/trunk/ACE-INSTALL.html
@@ -48,7 +48,7 @@ process</A>, as well.<P>
 <table width="100%" border=1>
   <tr valign=top>
     <td><b>Fully supported, i.e., continually tested and used daily</b></td>
-    <td>Solaris 2.5 and 2.6, Windows NT (MSVC++ 4.x and 5.0),
+    <td>Solaris 2.5 and 2.6, Windows NT (MSVC++ 4.x, 5.0, and 6.0),
         DEC Alpha Windows NT (MSVC++ 5.0), Linux/Intel,
         Linux/Alpha, VxWorks, LynxOS, Digital UNIX 4.0,
         HP/UX, AIX
@@ -87,8 +87,8 @@ try to help you fix the problems.
 
       All of ACE has been ported to the Win32 API (which includes Windows NT
       and Windows '95).  The entire release now compiles using the Microsoft
-      Visual C++ 4.x and 5.0 compilers (the 2.0 compiler may also work, but
-      we haven't tested it recently).  ACE can be built as both a static and
+      Visual C++ 4.x, 5.0, and 6.0 compilers (the 2.0 compiler may also work,
+      but we haven't tested it recently).  ACE can be built as both a static and
       dynamic library, using the Win32 installation process described
       below.<P>
 
