MSVC 6 is now in here also.

--- a/trunk/TAO/TAO-INSTALL.html
+++ b/trunk/TAO/TAO-INSTALL.html
@@ -137,7 +137,7 @@ you want to use.  This variable will override the default.
 Remember to <a href="http://www.cs.wustl.edu/~schmidt/ACE_wrappers/ACE-INSTALL.html">set
 up ACE</A> before building TAO.
 
-<H4>Visual C++ 5.0</H4>
+<H4>Visual C++ 5.0/6.0</H4>
 
 <P>It works best if TAO is placed in ACE_wrappers so TAO ends up in
 <CODE>ACE_wrappers\TAO</CODE> because the Visual C++ 5 Project files
@@ -146,8 +146,7 @@ sure you change the project files to look for the include and library
 files in the correct place.</P>
 
 <OL>
-  <LI>Make sure ACE is built (For Visual C++ 5.0, use ace.dsw or
-      ace-vc50.dsw, whichever is in your copy of ACE). <P>
+  <LI>Make sure ACE is built (For Visual C++ 5.0/6.0, use ace.dsw). <P>
 
   <LI>First make sure <CODE>ACE_wrappers\bin</CODE> is listed in the Executable
       Directories in Tools|Options.  This is needed if using the TAO_IDL
@@ -169,7 +168,7 @@ files in the correct place.</P>
 
 <H4><A NAME="taoace">TAOACE.dsw</A></H4>
 
-<P>TAOACE.dsw is a Visual C++ 5 workspace that loads the projects
+<P>TAOACE.dsw is a Visual C++ 5.0/6.0 workspace that loads the projects
 ACE, TAO, TAO_IDL (the compiler), orbsvcs, gperf and the Naming Service.
 The dependencies are set up to correctly between the projects so for
 example, ACE will be built automatically when TAO is built.  An easy
