--- a/trunk/etc/DOC-way.html
+++ b/trunk/etc/DOC-way.html
@@ -23,6 +23,8 @@ research group:
 <LI> Work hard
 <LI> Have fun
 <LI> Be creative
+<LI> Be curious
+<LI> Be extreme
 <LI> Learn new skills
 <LI> Teach your skills to others
 <LI> Value the contributions of team members
