--- a/trunk/etc/DOC-way.html
+++ b/trunk/etc/DOC-way.html
@@ -41,6 +41,7 @@ research group:
 <li> Drink Nestea
 <li> Watch South Park
 <li> Juggle and bounce balls
+<LI> Play ping-pong
 <LI> Swear under your breath at C++
 <LI> Fix at least two bugs every day
 <LI> Create at least one bug every day (and then fix it ;-))
