added Sun C++ version/patchlevel information

--- a/trunk/ACE-INSTALL.html
+++ b/trunk/ACE-INSTALL.html
@@ -106,7 +106,14 @@ try to help you fix the problems.
 
       All the source code and tests should build and run without
       any problems on the Solaris and SunOS platforms using the
-      Sun C++ compilers.<P>
+      Sun C++ compiler.  We use this version/patchlevel of
+      Sun C++:<p>
+      <pre>
+      CC: WorkShop Compilers 4.2 21 Apr 1997 C++ 4.2 patch 104631-02
+      </pre><p>
+      
+      There are likely to be build problems with older versions or
+      different patchlevels.<p>
 
   <LI> <B> Sun OS 4.1.x using Centerline C++ 2.x, Sun CC 3.x, and Lucid
       Energize 3.2. </B> <P>
