Solaris 2.5.1 and 2.6 instead of Solaris and SunOS

--- a/trunk/ACE-INSTALL.html
+++ b/trunk/ACE-INSTALL.html
@@ -105,7 +105,7 @@ try to help you fix the problems.
       C++ 4.0.x, Centerline C++ 2.x, and GNU gcc 2.7.x. </B> <P>
 
       All the source code and tests should build and run without
-      any problems on the Solaris and SunOS platforms using the
+      any problems on Solaris 2.5.1 and 2.6 platforms using the
       Sun C++ compiler.  We use this version/patchlevel of
       Sun C++:<p>
       <pre>
